<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Whatsapp2Anonymous</string>
    <string name="enviar_a">Send message to number:</string>
    <string name="enviara2">(including + and the country prefix)</string>
    <string name="enviar">Send!</string>
    <string name="Hints">"Comments, greetings, suggestions, collaborations!"</string>
    <string name="Enviar">Send email</string>
    <string name="Salir">Close</string>
    <string name="about">About...</string>
    <string name="titulo">Whatsapp2Anonymous</string>
    <string name="descripcion">Send WhatsApp messages to numbers not saved on the phone</string>

</resources>