<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutCompat5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".About">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"

            >

            <TextView
                android:id="@+id/Descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textSize="18dp"
                android:background="@drawable/edittextstyle"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                tools:layout_editor_absoluteX="129dp"
                tools:layout_editor_absoluteY="130dp"
                android:gravity="center_horizontal"
                android:inputType="textMultiLine"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                />
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dr. Victor Oviedo"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="129dp"
                tools:layout_editor_absoluteY="130dp"
                android:gravity="center_horizontal"
                android:singleLine="false"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="drvictoroviedo@gmail.com"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16dp"

                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="166dp"
                android:gravity="center_horizontal" />





        </androidx.appcompat.widget.LinearLayoutCompat>

        <EditText
            android:id="@+id/TextoCorreo"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/Hints"
            android:background="@drawable/edittextstyle"
            />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/Correo"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/Enviar" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Salir"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>